build ubuntu which specified base image

--- a/18.04/Dockerfile
+++ b/18.04/Dockerfile
@@ -1,5 +1,5 @@
-FROM ubuntu:16.04
-LABEL maintainer="Jeff Geerling"
+FROM ubuntu:bionic-20200403
+LABEL maintainer="Alex Alonso"
 
 ENV pip_packages "ansible pyopenssl"
 
