--- a/18.04/Dockerfile
+++ b/18.04/Dockerfile
@@ -4,12 +4,13 @@ LABEL maintainer="Alex Alonso"
 ENV pip_packages "ansible pyopenssl"
 
 # Install dependencies.
+
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
-       python-software-properties \
-       software-properties-common \
+       apt-utils \
        python-setuptools \
        python-pip \
+       software-properties-common \
        rsyslog systemd systemd-cron sudo \
     && rm -Rf /var/lib/apt/lists/* \
     && rm -Rf /usr/share/doc && rm -Rf /usr/share/man \
