--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '2.4'
 services:
   ubuntu-bionic:
     build: .
+    dockerfile: ubuntu/18.04/Dockerfile
     image: finaldes/docker-ubuntu-ansible:bionic
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
