--- a/.github/workflows/ubuntu-18.04.yml
+++ b/.github/workflows/ubuntu-18.04.yml
@@ -21,5 +21,9 @@ jobs:
       - uses: actions/checkout@v2.1.0
       - name: build image ubuntu 18.04
         run: docker-compose build
+      - name: run container
+        run: docker-compose up -d
       - name: check python version
         run: docker-compose exec ubuntu-bionic python3 --version
+      - name: destroy the container 
+        run: docker-compose down
