--- a/.github/workflows/ubuntu-18.04.yml
+++ b/.github/workflows/ubuntu-18.04.yml
@@ -17,15 +17,17 @@ jobs:
       matrix:
         os:
           - ubuntu-18.04
+    env:
+      COMPOSE_INTERACTIVE_NO_CLI: "1" #fix the input device is not a TTY
     steps:
       - uses: actions/checkout@v2.1.0
+      - name: check docker compose version
+        run: docker-compose --version
       - name: build image ubuntu 18.04
         run: docker-compose build
       - name: run container
         run: docker-compose up -d
       - name: check python version
         run: docker-compose exec ubuntu-bionic python3 --version
-        env:
-          COMPOSE_INTERACTIVE_NO_CLI: "1"
       - name: destroy the container 
         run: docker-compose down
