--- a/.github/workflows/ubuntu-18.04.yml
+++ b/.github/workflows/ubuntu-18.04.yml
@@ -17,8 +17,8 @@ jobs:
       matrix:
         os:
           - ubuntu-18.04
-    env:
-      COMPOSE_INTERACTIVE_NO_CLI: "1" #fix the input device is not a TTY
+    # env:
+      # COMPOSE_INTERACTIVE_NO_CLI: "1" #fix the input device is not a TTY
     steps:
       - uses: actions/checkout@v2.1.0
       - name: check docker compose version
@@ -28,6 +28,6 @@ jobs:
       - name: run container
         run: docker-compose up -d
       - name: check python version
-        run: docker-compose exec ubuntu-bionic python3 --version
+        run: docker-compose exec -T ubuntu-bionic python3 --version
       - name: destroy the container 
         run: docker-compose down
