--- a/.github/workflows/ubuntu-18.04.yml
+++ b/.github/workflows/ubuntu-18.04.yml
@@ -29,5 +29,7 @@ jobs:
         run: docker-compose up -d
       - name: check python version
         run: docker-compose exec -T ubuntu-bionic python3 --version
+      - name: check ansible
+        run: docker-compose exec -T ubuntu-bionic ansible --version
       - name: destroy the container 
         run: docker-compose down
