--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,25 @@
 version: '2.4'
 services:
+  ubuntu-xenial:
+    build:
+      context: .
+      dockerfile: ubuntu/16.04/Dockerfile
+    image: finaldes/docker-ubuntu-ansible:bionic
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    privileged: true
   ubuntu-bionic:
     build:
       context: .
       dockerfile: ubuntu/18.04/Dockerfile
+    image: finaldes/docker-ubuntu-ansible:bionic
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    privileged: true
+  ubuntu-foscal:
+    build:
+      context: .
+      dockerfile: ubuntu/20.04/Dockerfile
     image: finaldes/docker-ubuntu-ansible:bionic
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
