--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,14 +27,14 @@ jobs:
       - uses: actions/checkout@v2.1.0
       - name: check docker compose version
         run: docker-compose --version
-      - name: build image ubuntu 18.04
-        run: docker-compose build ${{maxtrix.build-os}}
+      - name: build image ubuntu ${{matrix.build-os}}
+        run: docker-compose build ${{matrix.build-os}}
       - name: run container
-        run: docker-compose up -d ${{maxtrix.build-os}}
+        run: docker-compose up -d ${{matrix.build-os}}
       - name: check python version
-        run: docker-compose exec -T ${{maxtrix.build-os}} python3 --version
+        run: docker-compose exec -T ${{matrix.build-os}} python3 --version
       - name: check ansible
-        run: docker-compose exec -T ${{maxtrix.build-os}} ansible --version
+        run: docker-compose exec -T ${{matrix.build-os}} ansible --version
       - name: destroy the container 
         run: docker-compose down
       
