--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -22,6 +22,7 @@ jobs:
         os:
           - ubuntu-18.04
     # env:
+    #   ANSIBLE_USER: ansible
       # COMPOSE_INTERACTIVE_NO_CLI: "1" #fix the input device is not a TTY
     steps:
       - uses: actions/checkout@v2.1.0
@@ -35,6 +36,8 @@ jobs:
         run: docker-compose exec -T ${{matrix.build-os}} python3 --version
       - name: check ansible
         run: docker-compose exec -T ${{matrix.build-os}} ansible --version
+      - name: ansible user
+        run:  docker-compose exec -T sudo -u ansible sudo -v
       - name: destroy the container 
         run: docker-compose down
       
