--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
 script:
   - docker-compose -f ubuntu.yml build foscal
   - docker container run --rm -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy finaldes/docker-ubuntu-ansible:foscal
-  - docker-compose up -d foscal
+  - docker-compose -f ubuntu.yml up -d foscal
   - docker-compose -f ubuntu.yml exec -T foscal python3 --version
   - docker-compose -f ubuntu.yml exec -T foscal ansible --version
   - docker-compose -f ubuntu.yml exec -T foscal sudo -u ansible sudo -v
