--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,8 +27,10 @@ jobs:
       # COMPOSE_INTERACTIVE_NO_CLI: "1" #fix the input device is not a TTY
     steps:
       - uses: actions/checkout@v2.1.0
-      - name: check docker compose version
-        run: docker-compose --version
+      # - name: check docker compose version
+      #   run: docker-compose --version
+      - name: lint docker-compose file
+        run: docker-compose -f ubuntu.yml config -q
       - name: build image ubuntu ${{matrix.build-os}}
         run: docker-compose -f ubuntu.yml build ${{matrix.build-os}}
       - name: list docker image 
