--- a/ubuntu/foscal/Dockerfile
+++ b/ubuntu/foscal/Dockerfile
@@ -12,6 +12,7 @@ RUN apt-get update \
        python3-pip \
        software-properties-common \
        rsyslog systemd systemd-cron sudo iproute2 \
+    && apt-get upgrade -y \
     && rm -Rf /var/lib/apt/lists/* \
     && rm -Rf /usr/share/doc && rm -Rf /usr/share/man \
     && apt-get clean
