update docker image
Signed-off-by: Alex Alonso <alex4551@gmail.com>

--- a/ubuntu.yml
+++ b/ubuntu.yml
@@ -9,7 +9,7 @@ services:
     build:
       context: .
       dockerfile: ubuntu/xenial/Dockerfile
-    image: finaldes/docker-ubuntu-ansible:bionic
+    image: finaldes/docker-ubuntu-ansible:xenial
   bionic:
     <<: *base
     build:
