fix typoSigned-off-by: Alex Alonso <alex4551@gmail.com>
Signed-off-by: Alex Alonso <alex4551@gmail.com>

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -19,7 +19,7 @@ jobs:
         build-os:
           - xenial
           - bionic
-          - foscal
+          - focal
         os:
           - ubuntu-18.04
     # env:
