fix typo on compose file
Signed-off-by: Alex Alonso <alex4551@gmail.com>

--- a/ubuntu.yml
+++ b/ubuntu.yml
@@ -16,7 +16,7 @@ services:
       context: .
       dockerfile: ubuntu/bionic/Dockerfile
     image: finaldes/docker-ubuntu-ansible:bionic
-  fosal:
+  focal:
     <<: *base
     build:
       context: .
