--- a/ubuntu/focal/Dockerfile
+++ b/ubuntu/focal/Dockerfile
@@ -1,5 +1,5 @@
-FROM ubuntu:focal-20200606
-LABEL maintainer="Jeff Geerling"
+FROM ubuntu:focal-20221130
+LABEL maintainer="Alex Alonso"
 
 ENV pip_packages "ansible"
 
@@ -22,7 +22,7 @@ RUN sed -i 's/^\($ModLoad imklog\)/#\1/' /etc/rsyslog.conf
 RUN locale-gen en_US.UTF-8
 
 # Install Ansible via Pip.
-RUN pip3 install $pip_packages
+RUN pip3 install --no-cache-dir $pip_packages
 
 COPY initctl_faker .
 RUN chmod +x initctl_faker && rm -fr /sbin/initctl && ln -s /initctl_faker /sbin/initctl
