--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,8 +17,8 @@ jobs:
     strategy:
       matrix:
         build-os:
-          - xenial
-          - bionic
+          # - xenial
+          # - bionic
           - focal
           - jammy
         os:
@@ -45,7 +45,7 @@ jobs:
       - name: list docker image 
         run: docker image ls
       - name: scan image
-        run: docker container run --rm -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy finaldes/docker-ubuntu-ansible:${{matrix.build-os}}
+        run: docker container run --rm -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy image finaldes/docker-ubuntu-ansible:${{matrix.build-os}}
       - name: run container
         run: docker-compose -f ubuntu.yml up -d ${{matrix.build-os}}
       - name: check python version
