update github action version

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,10 +27,10 @@ jobs:
     #   ANSIBLE_USER: ansible
       # COMPOSE_INTERACTIVE_NO_CLI: "1" #fix the input device is not a TTY
     steps:
-      - uses: actions/checkout@v2.1.0
+      - uses: actions/checkout@v3.3.0
       # - name: check docker compose version
       #   run: docker-compose --version
-      - uses: brpaz/hadolint-action@master
+      - uses: hadolint/hadolint-action@v3.1.0
         with:
           dockerfile:  "ubuntu/${{matrix.build-os}}/Dockerfile"
       # - name: docker file
