--- a/.github/workflows/docker2.yml
+++ b/.github/workflows/docker2.yml
@@ -6,7 +6,7 @@ on:
       - master
     paths:
       - ubuntu/jammy/Dockerfile
-      - ubuntu/focal/DOckerFile
+      - ubuntu/focal/DockerFile
   push:
     branches:
       - master
@@ -35,11 +35,11 @@ jobs:
           dockerfile:  "ubuntu/${{matrix.build-os}}/Dockerfile"
       - 
         name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2.0.0
+        uses: docker/setup-buildx-action@v2.4.1
         id: buildx
       -
         name: Cache Docker layers
-        uses: actions/cache@v3.0.2
+        uses: actions/cache@v3.2.5
         with:
           path: /tmp/.buildx-cache
           key: ${{ runner.os }}-buildx-${{ github.sha }}
@@ -48,7 +48,7 @@ jobs:
       -
         name: Login to DockerHub
         if: github.event_name != 'pull_request'
-        uses: docker/login-action@v2.0.0 
+        uses: docker/login-action@v2.1.0 
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -62,7 +62,7 @@ jobs:
       -
         name: Docker meta
         id: base_meta
-        uses: docker/metadata-action@v4.0.1
+        uses: docker/metadata-action@v4.3.0
         with:
           images: |
             finaldes/docker-ubuntu-ansible
@@ -75,7 +75,7 @@ jobs:
       -
         # this will build the amd64 image
         name: Docker Build
-        uses: docker/build-push-action@v3.0.0
+        uses: docker/build-push-action@v4.0.0
         with:
           platforms: linux/amd64
           builder: ${{ steps.buildx.outputs.name }}
@@ -89,7 +89,7 @@ jobs:
           load: true
       - 
         name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@v0.9.1
         with:
           image-ref: 'finaldes/docker-ubuntu-ansible:${{matrix.build-os}}'
           format: 'template'
@@ -104,7 +104,7 @@ jobs:
         # this will push the amd64 image
         name: Docker Build
         id: docker_build
-        uses: docker/build-push-action@v3.0.0
+        uses: docker/build-push-action@v4.0.0
         with:
           platforms: linux/amd64
           builder: ${{ steps.buildx.outputs.name }}
