use latest version of python to install ansible

--- a/ubuntu/jammy/Dockerfile
+++ b/ubuntu/jammy/Dockerfile
@@ -4,16 +4,20 @@ LABEL maintainer="Alex Alonso"
 
 ENV pip_packages "ansible"
 
+ADD https://bootstrap.pypa.io/get-pip.py get-pip.py
 # Install dependencies.
 RUN <<EOR
+  apt-get update
+  apt-get install -y --no-install-recommends software-properties-common
+  add-apt-repository -y ppa:deadsnakes/ppa
   apt-get update
   apt-get install -y --no-install-recommends \
    apt-utils \
    locales \
-   python3-setuptools \
-   python3-pip \
+   python3.11 \
    software-properties-common \
-   rsyslog systemd systemd-cron sudo iproute2
+   rsyslog systemd systemd-cron sudo iproute2 \
+  python3.11 get-pip.py
   apt-get upgrade -y
   rm -Rf /var/lib/apt/lists/*
   rm -Rf /usr/share/doc && rm -Rf /usr/share/man
@@ -26,7 +30,7 @@ RUN sed -i 's/^\($ModLoad imklog\)/#\1/' /etc/rsyslog.conf
 RUN locale-gen en_US.UTF-8
 
 # Install Ansible via Pip.
-RUN pip3 install --no-cache-dir $pip_packages
+RUN python3.11 -m pip install --no-cache-dir $pip_packages
 
 COPY initctl_faker .
 RUN chmod +x initctl_faker && rm -fr /sbin/initctl && ln -s /initctl_faker /sbin/initctl
