--- a/.github/workflows/docker2.yml
+++ b/.github/workflows/docker2.yml
@@ -19,7 +19,7 @@ jobs:
       matrix:
         build-os:
           # - xenial
-          # - bionic
+          - bionic
           - focal
           - jammy
         os:
