--- a/.github/workflows/docker2.yml
+++ b/.github/workflows/docker2.yml
@@ -1,5 +1,5 @@
 ---
-name: docker build 2
+name: push image
 on:
   pull_request:
     branches:
@@ -7,6 +7,7 @@ on:
     paths:
       - ubuntu/jammy/Dockerfile
       - ubuntu/focal/DockerFile
+      - ubuntu/bionic/DockerFile
   push:
     branches:
       - master
