--- a/.github/workflows/docker2.yml
+++ b/.github/workflows/docker2.yml
@@ -21,9 +21,10 @@ jobs:
       matrix:
         build-os:
           # - xenial
-          - bionic
+          # - bionic
           - focal
           - jammy
+          - noble
         os:
           - ubuntu-24.04
     steps:
