--- a/ubuntu.yml
+++ b/ubuntu.yml
@@ -1,4 +1,3 @@
-version: '2.4'
 x-base: &base
   volumes:
     - /sys/fs/cgroup:/sys/fs/cgroup:ro
@@ -28,3 +27,9 @@ services:
       context: .
       dockerfile: ubuntu/jammy/Dockerfile
     image: finaldes/docker-ubuntu-ansible:jammy
+  noble:
+    <<: *base
+    build:
+      context: .
+      dockerfile: ubuntu/noble/Dockerfile
+    image: finaldes/docker-ubuntu-ansible:noble
